--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="https://texnomart.uz/_nuxt/img/logo-gold.43d88b3.svg">
-    <title>Texnomart Admin Panel</title>
+    <title>asaxiy admin</title>
   </head>
   <body>
     <div class="wrapper"></div>
